# openapi-vulnerability-scanner

./: .gitignore  README.md  pyproject.toml  testing.ipynb
.ipynb_checkpoints/: README-checkpoint.md
jupyter/: dereference.ipynb
jupyter/.ipynb_checkpoints/: dereference-checkpoint.ipynb
openapi_scanner/: __init__.py  api.py  cli.py  constants.py  parser.py  scanner.py
opensqli/: __init__.py  cli.py  constants.py  parser.py  scanner.py  scheme.py  utils.py
tests/: test_openapi_scanner.py  test_opensqli.py
